# omnispan

./: README.md  benchmark.py  run1.json  server.py  todo.md  workflow.md
bench/: benchmark.py  measure.py  micro_batch_w10_b2.json  micro_batch_w10_b4.json  micro_batch_w10_b8.json  micro_batch_w20_b2.json  micro_batch_w20_b4.json  micro_batch_w20_b8.json  micro_batch_w50_b2.json  micro_batch_w50_b4.json  micro_batch_w50_b8.json  run2.json  run3.json  run4_direct_failed.json  run5_micro_batch.json  run6_micro_batch_w10_b2.json
bench/runpod/: qwen3_32b_awq_apc_off_2x2_r6_t64.json  qwen3_32b_awq_apc_on_2x2_r6_t64.json  qwen3_32b_awq_micro_batch_10x10.json  qwen3_32b_awq_micro_batch_1x1.json
docs/: benchmarks.md  design.md  todo.md
engine/: Cargo.toml  build.rs
engine/src/: config.rs  engine.rs  lib.rs  queue.rs  worker_client.rs
proto/: omnispan.proto
worker/: measure_batching.py  measure_prefix_cache.py  mlx_runtime.py  requirements-vllm.txt  requirements.txt  vllm_runtime.py  worker.py  worker_runtime.py
