[package]
name = "omnispan"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "omnispan-engine"
path = "src/bin/omnispan-engine.rs"

[dependencies]
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tonic = "0.11"
tonic-health = "0.11"

[build-dependencies]
tonic-build = "0.11"
